--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 }
 body {
     font-family: "Poppins", "Open Sans", sans-serif;
+    width: 100%;
+    overflow-x: hidden;
 }
 .container {
     width: 95%;
@@ -28,6 +30,230 @@ ul {
     clear: both;
 }
 /* End Global */
+/* Start Floating sections */
+/* Start Contact Us */
+.contact-us {
+    position: fixed;
+    z-index: 12;
+    background-color: #fff;
+    padding: 10px 20px;
+    height: 100vh;
+    width: 300px;
+    text-align: center;
+    transition: left 1s ease-in-out;
+    left: -420px;
+    overflow-y: auto;
+}
+.contact-us h1 {
+    color: var(--main-color);
+    text-transform: uppercase;
+    font-weight: lighter;
+}
+.contact-us > div {
+    margin-bottom: 20px;
+    border-radius: 5px;
+    background-color: #eee;
+    padding: 10px;
+    transition: all 0.5s ease-in-out;
+}
+.contact-us > div:hover {
+    background-color: var(--main-color);
+}
+.contact-us h2 {
+    color: #707070;
+    font-size: 20px;
+    transition: all 0.5s ease-in-out;
+}
+.contact-us > div:hover h2 {
+    color: #fff;
+}
+.contact-us .icon-container {
+    height: 50px;
+    width: 50px;
+    border: 1px solid #707070;
+    margin: 0 auto;
+    border-radius: 50%;
+    transition: all 0.5s ease-in-out;
+}
+.contact-us > div:hover .icon-container {
+    background-color: var(--alt-color);
+    border-color: var(--alt-color);
+}
+.contact-us .icon-container i {
+    color: var(--alt-color);
+    line-height: 50px;
+    font-size: 25px;
+    transition: all 0.5s ease-in-out;
+}
+.contact-us > div:hover .icon-container i {
+    color: #fff;
+}
+.contact-us p {
+    font-size: 18px;
+    color: var(--main-color);
+}
+.contact-us > div:hover p {
+    color: #fff;
+    transition: all 0.5s ease-in-out;
+}
+.contact-us > i {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    left: 273px;
+    line-height: 50px;
+    font-size: 27px;
+    color: #707070;
+    cursor: pointer;
+}
+/* End Contact Us */
+/* Start Scroll To Top */
+.scroll-to-top {
+    position: fixed;
+    background-color: var(--alt-color);
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    line-height: 40px;
+    text-align: center;
+    font-size: 30px;
+    border-radius: 7px;
+    top: calc(100% - 50px);
+    z-index: 15;
+    right: -60px;
+    cursor: pointer;
+    transition: right 0.5s linear;
+}
+/* End Scroll To Top */
+/* Start Video Popup */
+.video-popup {
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 16;
+    position: fixed;
+    display: none;
+    opacity: 0;
+    width: 0;
+    transition: all 0.5s ease-in-out;
+}
+.video-popup.active {
+    display: block;
+}
+.video-popup.unfade {
+    opacity: 0;
+    width: 0;
+}
+.video-popup.fade {
+    opacity: 1;
+    width: 100%;
+}
+.video-popup .close-popup {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: var(--main-color);
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    line-height: 40px;
+    text-align: center;
+    font-size: 32px;
+    border-radius: 7px;
+    cursor: pointer;
+}
+.video-popup .video-container {
+    background-color: #fff;
+    padding: 2.5%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    border-radius: 5px;
+}
+.video-popup .video-container h1 {
+    text-align: center;
+    margin: 0 0 30px;
+    color: #505050;
+}
+.video-popup .video-container video {
+    width: 95%;
+}
+@media (max-width: 767px) {
+    .video-popup .video-container {
+        width: 75%;
+    }
+    .video-popup .video-container h1 {
+        font-size: 22px
+    }
+}
+/* End Video Popup */
+/* Start Image Popup */
+.img-popup {
+    padding: 20px;
+    width: 60%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--main-color);
+    z-index: 21;
+    display: none;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    opacity: 0;
+    transition: opacity .5s linear;
+}
+.img-popup.active {
+    opacity: 1
+}
+.img-popup img {
+    width: 300px;
+    height: 300px;
+    top: 50%;
+    left: 40px;
+    float: left
+}
+.img-popup span {
+    position: absolute;
+    background-color: var(--alt-color);
+    width: 50px;
+    height: 50px;
+    top: -25px;
+    left: -25px;
+    color: #fff;
+    font-size: 30px;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.img-popup .content {
+    width: 40%;
+    color: #fff
+}
+@media (max-width: 890px) {
+    .img-popup {
+        height: 80% ;
+        width: 50%;
+        flex-wrap: wrap
+    }
+    .img-popup.active img {
+        width: 100px;
+        height: 100px
+    }
+    .img-popup.active .content h1{
+        font-size: 16px;
+    }
+    .img-popup.active .content {
+        font-size: 11px;
+        text-align: center;
+        width: 100%
+    }
+}
+/* End Image Popup */
+/* End Floating sections */
 /* Start Header */
 header nav {
     padding: 20px 0;
@@ -110,19 +336,36 @@ header .services .dropdown {
 header .services.active .dropdown {
     display: block;
 }
+header .toggle-links {
+    display: block;
+    background-color: var(--main-color);
+    border: 1px solid #ccc;
+    height: 50px;
+    width: 50px;
+    color: #fff;
+    font-size: 25px
+}
+header .toggle-links:focus {
+    outline: none;
+}
 header section {
-    background: url("../images/header\ background.png") no-repeat top center fixed;
+    background: url("../images/header\ background.png") no-repeat top center
+        fixed;
     min-height: 700px;
     color: #fff;
     text-align: center;
     position: relative;
 }
 header section .overlay {
-    background-color: #0fb9b196;
+    display: flex;
+    background-color: rgba(41, 45, 45, 0.59);
+    align-items: center;
+    justify-content: center;
 }
 header section .content {
-    margin-top: 25%;
-    transform: translateY(-50%);
+    width: 50%;
+    height: 50%;
+    padding: 20px
 }
 header section .content h1 {
     font-size: 46px;
@@ -137,7 +380,7 @@ header section .content p {
 }
 header section .content button {
     margin-top: 20px;
-    background-color: transparent;
+    background-color: var(--alt-color);
     padding: 10px 30px;
     border: 3px solid var(--alt-color);
     border-radius: 5px;
@@ -146,89 +389,49 @@ header section .content button {
     text-transform: uppercase;
     font-weight: 500;
     cursor: pointer;
-    transition: all .2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
-header section .content button:hover{
-    background-color: var(--alt-color);
+header section .content button:focus {
+    outline: none;
+}
+@media (min-width: 992px) {
+    header nav .links {
+        display: block
+    }
+    header .toggle-links {
+        display: none
+    }
+}
+@media (max-width: 991px) {
+    header nav .links  {
+        display: none;
+        height: 0;
+        transition: height .5s linear;
+    }
+    header nav .links.active {
+        display: block;
+    }
+    header nav .links.active li {
+        display: block;
+    }
+    header nav  {
+        justify-content: space-between;
+    }
+}
+@media (max-width: 462px) {
+    header section .content h1 {
+        font-size: 36px
+    }
+}
+@media (max-width: 364px) {
+    header section .content h1 {
+        font-size: 32px
+    }
+    header section .content button {
+        margin-top: 0;
+    }
 }
 /* End Header */
-/* Start Contact Us */
-.contact-us {
-    position: fixed;
-    z-index: 12;
-    background-color: #fff;
-    padding: 10px 20px;
-    height: 100vh;
-    width: 300px;
-    text-align: center;
-    transition: left 1s ease-in-out;
-    left: -420px;
-    overflow-y: auto;
-}
-.contact-us h1 {
-    color: var(--main-color);
-    text-transform: uppercase;
-    font-weight: lighter;
-}
-.contact-us > div {
-    margin-bottom: 20px;
-    border-radius: 5px;
-    background-color: #eee;
-    padding: 10px;
-    transition: all 0.5s ease-in-out;
-}
-.contact-us > div:hover {
-    background-color: var(--main-color);
-}
-.contact-us h2 {
-    color: #707070;
-    font-size: 20px;
-    transition: all 0.5s ease-in-out;
-}
-.contact-us > div:hover h2 {
-    color: #fff;
-}
-.contact-us .icon-container {
-    height: 50px;
-    width: 50px;
-    border: 1px solid #707070;
-    margin: 0 auto;
-    border-radius: 50%;
-    transition: all 0.5s ease-in-out;
-}
-.contact-us > div:hover .icon-container {
-    background-color: var(--alt-color);
-    border-color: var(--alt-color);
-}
-.contact-us .icon-container i {
-    color: var(--alt-color);
-    line-height: 50px;
-    font-size: 25px;
-    transition: all 0.5s ease-in-out;
-}
-.contact-us > div:hover .icon-container i {
-    color: #fff;
-}
-.contact-us p {
-    font-size: 18px;
-    color: var(--main-color);
-}
-.contact-us > div:hover p {
-    color: #fff;
-    transition: all 0.5s ease-in-out;
-}
-.contact-us > i {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 0;
-    left: 273px;
-    line-height: 50px;
-    font-size: 27px;
-    color: #707070;
-    cursor: pointer;
-}
-/* End Contact Us */
 /* Start About Us */
 .about-us {
     padding: 30px 0;
@@ -237,7 +440,6 @@ header section .content button:hover{
     position: relative;
 }
 .about-us h2 {
-    position: relative;
     color: #fff;
     font-size: 32px;
     background-color: var(--main-color);
@@ -246,20 +448,11 @@ header section .content button:hover{
     margin-right: auto;
     padding: 10px 20px;
 }
-.about-us span {
-    width: 100%;
-    height: 20px;
-    position: absolute;
-    background-color: var(--main-color);
-    left: 0;
-    top: 75px;
-    z-index: 0;
-}
 .about-us > div {
-    width: 49%;
+    width: 48%;
     height: 100%;
-    float: left;
-    padding: .5%;
+    padding: 0.5%;
+    display: inline-block;
 }
 .about-us > div.left .content {
     padding: 60px;
@@ -275,7 +468,7 @@ header section .content button:hover{
     color: #fff;
     border: none;
     border-radius: 10px;
-    transition: all .2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 .about-us > div.left .content button:hover {
     background-color: #bd304a;
@@ -283,4 +476,240 @@ header section .content button:hover{
 .about-us > div img {
     width: 500px;
 }
+@media (max-width: 1030px) {
+    .about-us > div {
+        width: 80%
+    } 
+}
+@media (max-width: 754px) {
+    .about-us h2 {
+        width: 30%
+    }
+}
+@media (max-width: 572px) {
+    .about-us > div.left {
+        width: 100%
+    }
+    .about-us > div.right {
+        width: 70%
+    }
+    .about-us > div img {
+        width: 100%
+    }
+    .about-us h2 {
+        width: 40%
+    }
+}
+@media (max-width: 435px) {
+    .about-us div.left .content  {
+        padding: 30px 20px
+    }
+}
 /* End About Us */
+/* Start Our Gallery */
+.our-gallery {
+    padding: 40px 0;
+    text-align: center;
+}
+.our-gallery h1 {
+    color: #fff;
+    font-size: 32px;
+    background-color: var(--main-color);
+    width: 20%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px 20px;
+}
+.our-gallery .gallery-container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+    padding: 20px 40px;
+    background-color: #eee;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.our-gallery .gallery-container div.img {
+    position: relative;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    border: 5px solid var(--alt-color);
+    overflow: hidden;
+    height: 200px;
+}
+.our-gallery .gallery-container div.img img {width: 200px; height: 200px}
+.our-gallery .gallery-container div.img .overlay{
+    background-color: var(--main-color);
+    opacity: 0.5;
+    transition: all .3s linear;
+    width: 50%
+}
+.our-gallery .gallery-container div.img .overlay.right {
+    left: 100%;
+}
+.our-gallery .gallery-container div.img .overlay.left {
+    left: -50%;
+}
+.our-gallery .gallery-container div.img:hover .overlay.right {
+    left: 50%;
+}
+.our-gallery .gallery-container div.img:hover .overlay.left {
+    left: 0%
+}
+.our-gallery .gallery-container div.img span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    z-index: 20;
+    font-size: 22px;
+    opacity: 0;
+    transition-property: opacity;
+    transition-delay: .3s;
+    transition-duration: .3s;
+    transition-timing-function: linear;
+}
+.our-gallery .gallery-container div.img span button {
+    color: #fff;
+    background-color: var(--alt-color);
+    padding: 5px 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 5px
+}
+.our-gallery .gallery-container div.img:hover span {
+    opacity: 1
+}
+@media (max-width: 994px) {
+    .our-gallery h1 {
+        width: 30%
+    }
+}
+@media (max-width: 668px) {
+    .our-gallery h1 {
+        width: 40%
+    }
+}
+@media (max-width: 530px) {
+    .our-gallery h1 {
+        width: 80%
+    }
+}
+
+@media (max-width: 1178px) {
+    .our-gallery .gallery-container {
+        width: 56%
+    }
+}
+@media (max-width: 789px) {
+    .our-gallery .gallery-container .img {
+        width: 100%;
+    }
+    .our-gallery .gallery-container {
+        padding: 20px 5px;
+        width: 90%
+    }
+    .our-gallery .container {
+        width: 100%
+    }
+}
+/* End Our Gallery */
+/* Start Footer */
+footer {
+    padding: 30px 0;
+    background-color: #f7f7f7;
+}
+footer section {
+    float: left;
+    width: 50%;
+}
+footer section .logo {
+    color: var(--alt-color);
+    font-size: 45px;
+}
+footer section .logo::first-letter {
+    background-color: var(--alt-color);
+    color: #fff;
+    padding: 0 5px;
+    border-radius: 7px;
+}
+footer section h2 {
+    color: #505050;
+    font-size: 28px;
+}
+footer section:first-child h2 {
+    margin-left: 20px;
+}
+footer section .pages-links li {
+    margin-left: 40px;
+}
+footer section .pages-links li i {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    background-color: var(--main-color);
+    color: #fff;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+footer section .pages-links li span {
+    color: #303030;
+    text-transform: uppercase;
+    font-size: 18px;
+}
+footer section .links {
+    margin-left: 20px;
+}
+footer section .links li {
+    margin-bottom: 10px;
+    background-color: var(--main-color);
+    padding: 10px;
+    color: #fff;
+    width: 30%;
+    text-align: center;
+}
+footer section p {
+    margin-left: 20px;
+    margin-top: 10px;
+    background-color: var(--alt-color);
+    color: #fff;
+    padding: 20px;
+    width: 80%;
+    font-size: 16px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+@media (max-width: 676px) {
+    footer section {
+        width: 100%
+    }
+    footer section h2 {
+        text-align: center;
+    }
+    footer section .links li {
+        width: 80%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    footer section p {
+        margin-right: auto;
+        margin-left: auto;
+        width: 50%
+    }
+    
+}
+/* End Footer */
+/* Start copyright */
+.copyright {
+    text-align: center;
+    background-color: var(--main-color);
+    padding: 30px;
+    font-size: 22px;
+    color: #fff;
+}
+/* End copyright */
